Added script to start application and procfile for Heroku

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "query-string": "^6.11.1"
   },
   "scripts": {
-    "start": "nodemon src/server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   }
 }
