--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "express": "^4.17.1",
     "googleapis": "^48.0.0",
     "mongoose": "^5.9.4",
-    "nodemon": "^2.0.2",
     "query-string": "^6.11.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   },
   "scripts": {
     "start": "node src/server.js",
