--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Lucas Garicoix",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "googleapis": "^48.0.0",
     "mongoose": "^5.9.4",
